--- a/reference.bib
+++ b/reference.bib
@@ -142,56 +142,79 @@
 }
 
 @book{iaapa2018,
-  place={Alexandria, VA},
-  journal={IAAPA RIDE SAFETY REPORT – NORTH AMERICA – 2018},
-  author={International Association of Amusement Parks and Attractions},
-  year={2018}
+  journal = {IAAPA RIDE SAFETY REPORT – NORTH AMERICA – 2018},
+  author = {International Association of Amusement Parks and Attractions},
+  place = {Alexandria, VA},
+  year = {2018}
 }
 
 @book{iaapa2017,
-  place={Orlando, FL},
-  journal={Global theme and Amusement Park Outlook 2017–2021},
-  author={International Association of Amusement Parks and Attractions},
-  year={2017}
+  title = {Global theme and Amusement Park Outlook 2017–2021},
+  author = {International Association of Amusement Parks and Attractions},
+  place = {Orlando, FL},
+  year = {2017}
 }
 
 @article{dataworld,
-  title={Texas Amusement Park Accidents},
-  url={https://data.world/amillerbernd/texas-amusement-park-accidents},
-  author={Millerbernd, Annie},
-  year={2018},
-  month={Mar}
+  title = {Texas Amusement Park Accidents},
+  author = {Millerbernd, Annie},
+  url = {https://data.world/amillerbernd/texas-amusement-park-accidents},
+  year = {2018},
+  month = {Mar}
 }
 
 @misc{tdi,
-  title={Amusement ride FAQs},
-  url={https://www.tdi.texas.gov/commercial/lcamuseinfo.html#reports},
-  journal={Texas Department of Insurance},
-  author={Texas Department of Insurance},
-  year={2019},
-  month={Apr}
+  title = {Amusement ride FAQs},
+  author = {Texas Department of Insurance},
+  url = {https://www.tdi.texas.gov/commercial/lcamuseinfo.html#reports},
+  year = {2019},
+  month = {Apr}
 }
 
 @misc{saferpark_web,
-  title={Accident Reports from State/Federal Regulators},
-  url={https://ridesdatabase.org/saferparks/data/},
-  author={Saferparks},
-  author={Saferparks},
-  year={2020}
+  title = {Accident Reports from State/Federal Regulators},
+  author = {Saferparks},
+  url = {https://ridesdatabase.org/saferparks/data/},
+  year = {2020}
 }
 
 @misc{schneider_2019,
-  title={Theme Park Attendance Crosses Half-Billion Mark for 1st Time},
-  url={https://www.usnews.com/news/best-states/florida/articles/2019-05-23/theme-park-attendance-crosses-half-billion-mark-for-1st-time},
-  journal={U.S. News & World Report},
-  author={Schneider, Mike},
-  year={2019},
-  month={May}
+  title = {Theme Park Attendance Crosses Half-Billion Mark for 1st Time},
+  author = {Schneider, Mike},
+  url = {https://www.usnews.com/news/best-states/florida/articles/2019-05-23/theme-park-attendance-crosses-half-billion-mark-for-1st-time},
+  journal = {U.S. News & World Report},
+  year = {2019},
+  month = {May}
 }
 
 @misc{tdi_pol,
-  author = {Texas Department of Insurance},
   title = {Amusement ride current insurance policies},
-  url= {https://www.tdi.texas.gov/commercial/lcamusepolicy.html},
+  author = {Texas Department of Insurance},
+  url = {https://www.tdi.texas.gov/commercial/lcamusepolicy.html},
   year={2020}
 }
+
+@Manual{here,
+    title = {here: A Simpler Way to Find Your Files},
+    author = {Kirill Müller},
+    year = {2017},
+    note = {R package version 0.1},
+    url = {https://CRAN.R-project.org/package=here},
+  }
+
+@Manual{janitor,
+    title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
+    author = {Sam Firke},
+    year = {2020},
+    note = {R package version 2.0.1},
+    url = {https://CRAN.R-project.org/package=janitor},
+  }
+
+@Book{plotly,
+    author = {Carson Sievert},
+    title = {Interactive Web-Based Data Visualization with R, plotly, and shiny},
+    publisher = {Chapman and Hall/CRC},
+    year = {2020},
+    isbn = {9781138331457},
+    url = {https://plotly-r.com},
+  }
