Edit reference.bib file and delete unused bib file

--- a/reference.bib
+++ b/reference.bib
@@ -120,7 +120,7 @@
 @misc{tdi_req,
   title={Amusement ride requirements},
   url={https://www.tdi.texas.gov/commercial/indexamusement.html},
-  author={Texas Department of Insurance},
+  author={TDI},
   year={2020},
   month={Jul}
 }
@@ -150,7 +150,7 @@
 
 @book{iaapa2017,
   title = {Global theme and Amusement Park Outlook 2017–2021},
-  author = {International Association of Amusement Parks and Attractions},
+  author = {IAAPA},
   place = {Orlando, FL},
   year = {2017}
 }
@@ -189,9 +189,9 @@
 
 @misc{tdi_pol,
   title = {Amusement ride current insurance policies},
-  author = {Texas Department of Insurance},
+  author = {TDI},
   url = {https://www.tdi.texas.gov/commercial/lcamusepolicy.html},
-  year={2020}
+  year={2020},
 }
 
 @Manual{here,
