--- a/reference.bib
+++ b/reference.bib
@@ -103,7 +103,7 @@
   @book{saferpark,
   url={https://ridesdatabase.org/wp-content/uploads/2020/02/Saferparks-data-description.pdf},
   journal={Saferparks Accident Data},
-  author={Saferpark},
+  author={Saferparks},
   pages={2–3}
   }
 
