--- a/index.Rmd
+++ b/index.Rmd
@@ -393,7 +393,12 @@ ggplotly(accidents_insurance_fig)
 
 # What are characteristics of body part injured? Is there any improvement in preventing serious injuries? 
 
-# new question 2
+# State level analysis
+## The states with the most amusement park injuries
+Analyse the tx_comp data by state, find the states with the most amusement park injuries. And create a heat map of injuries.
+
+## The most dangerous ride in each state
+Find out the most dangerous ride in each state, displaying the number of injuries and the manufacturer name. This could remind people to avoid the most dangerous ride in their state, and we can further analyse which manufacturer's products caused more injuries over the years.
 
 # Acknowledgments
 The following packages are used to produce this report:
